--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@stripe/stripe-js": "^1.47.0",
     "@tanstack/react-query": "^4.24.10",
     "axios": "^1.3.4",
-    "infinite-react-carousel": "^1.2.11",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
-    "sass": "^1.58.0"
+    "react-slick": "^0.29.0",
+    "sass": "^1.58.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
